[project]
name = "learn-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "syedshahmirsultan", email = "syedshahmirsultan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.12.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[project.scripts]
learn-mcp = "learn_mcp:main"
mcp-client = "learn_mcp.mcp_client:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
